WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58243
fix crc computation on 64 bit machines
https://bugs.webkit.org/show_bug.cgi?id=58243
Summary
fix crc computation on 64 bit machines
Tony Chang
Reported
2011-04-11 09:51:53 PDT
fix crc computation on 64 bit machines
Attachments
Patch
(3.75 KB, patch)
2011-04-11 09:53 PDT
,
Tony Chang
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2011-04-11 09:53:43 PDT
Created
attachment 89019
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-04-11 11:25:35 PDT
Comment on
attachment 89019
[details]
Patch I like this change. No way to test it?
Tony Chang
Comment 3
2011-04-11 11:36:37 PDT
Committed
r83461
: <
http://trac.webkit.org/changeset/83461
>
Tony Chang
Comment 4
2011-04-11 11:37:40 PDT
(In reply to
comment #2
)
> (From update of
attachment 89019
[details]
) > No way to test it?
AFAIK, there's no way to write tests for DRT code.
Alexey Proskuryakov
Comment 5
2011-04-11 15:05:43 PDT
Why not uint32_t? Unlike unsigned, it's actually really always 32 bit.
Tony Chang
Comment 6
2011-04-11 16:24:59 PDT
(In reply to
comment #5
)
> Why not uint32_t? Unlike unsigned, it's actually really always 32 bit.
It looks like stdint.h isn't included with MSVC, but there's a copy in Source/JavaScriptCore/os-win32 that has uint32_t defined. It seems like I could either change the include path on win and win-cairo or just #if COMPILER(MSVC) the typedef. Does one of these sound like the preferred way to you, Alexey?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug