2011-04-11  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        fix crc computation on 64 bit machines
        https://bugs.webkit.org/show_bug.cgi?id=58243

        unsigned long is dependenct on CPU architecture, so use unsigned which is always 32 bits

        * DumpRenderTree/CyclicRedundancyCheck.cpp:
        (makeCrcTable):
        (computeCrc):
        * DumpRenderTree/CyclicRedundancyCheck.h:
        * DumpRenderTree/PixelDumpSupport.cpp:
        (appendIntToVector):
        (convertChecksumToPNGComment):

Canonical link: https://commits.webkit.org/73232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83461 268f45cc-cd09-0410-ab3c-d52691b4dbfc